provisioning/kubernetes-manifests/configuration/screen/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: screen-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: screen.os2displaykff.reload.dk
    http:
      paths:
        - backend:
            serviceName: screen
            servicePort: main-port
          path: /
  tls:
  - hosts:
    - screen.os2displaykff.reload.dk
    secretName: screen-ingress-cert # cert-manager will populate this.
